--- a/main-performance/pom.xml
+++ b/main-performance/pom.xml
@@ -3,12 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.virtual-thread</groupId>
-		<artifactId>spring-performance</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.1.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
+	<groupId>com.virtual-thread</groupId>
 	<artifactId>main-performance</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>main-spring-performance</name>
